feat: 응답에 영업중 여부 포함 및 영업중으로 정렬